@@ -146,6 +146,10 @@ _DEFAULT_AWS_REGION = 'us-west-2'
 # default AMI to use on EMR. This will be updated with each version
 _DEFAULT_AMI_VERSION = '3.11.0'
 
+# EMR translates the dead/deprecated "latest" AMI version to 2.4.2
+# (2.4.2 isn't actually the latest version by a long shot)
+_AMI_VERSION_LATEST = '2.4.2'
+
 # Hadoop streaming jar on 1-3.x AMIs
 _PRE_4_X_STREAMING_JAR = '/home/hadoop/contrib/streaming/hadoop-streaming.jar'
 
@@ -378,6 +382,7 @@ class EMRRunnerOptionStore(RunnerOptionStore):
             self['aws_region'] = _DEFAULT_AWS_REGION
 
         self._fix_ec2_instance_opts()
+        self._fix_ami_version_latest()
         self._fix_release_label_opt()
 
     def default_options(self):
@@ -498,14 +503,20 @@ class EMRRunnerOptionStore(RunnerOptionStore):
                 except ValueError:
                     pass  # maybe EMR will accept non-floats?
 
+    def _fix_ami_version_latest(self):
+        """Translate the dead/deprecated *ami_version* value ``latest``
+        to ``2.4.2`` up-front, so our code doesn't have to deal with
+        non-numeric AMI versions."""
+        if self['ami_version'] == 'latest':
+            self['ami_version'] = _AMI_VERSION_LATEST
+
     def _fix_release_label_opt(self):
         """If *release_label* is not set and *ami_version* is set to version
         4 or higher (which the EMR API won't accept), set *release_label*
         to "emr-" plus *ami_version*. (Leave *ami_version* as-is;
         *release_label* overrides it anyway.)"""
-        if (not self['release_label'] and
-                self['ami_version'] != 'latest' and
-                version_gte(self['ami_version'], '4')):
+        if (version_gte(self['ami_version'], '4') and
+                not self['release_label']):
             self['release_label'] = 'emr-' + self['ami_version']
 
 
@@ -673,16 +684,21 @@ class EMRJobRunner(MRJobRunner, LogInterpretationMixin):
         if local or not PY2:
             return super(EMRJobRunner, self)._default_python_bin(local=local)
 
-        if self._opts['ami_version'] == 'latest':  # e.g. 2.4.9
-            return 'python2.7'
-        elif version_gte(self._opts['ami_version'], '3'):
-            if sys.version_info < (2, 7):
-                return 'python2.6'
-            else:
+        if self._opts['release_label'] or version_gte(
+                self._opts['ami_version'], '3'):
+            # on 3.x and 4.x AMIs, both versions of Python work, so just
+            # match whatever version we're using locally
+            if sys.version_info >= (2, 7):
                 return 'python2.7'
+            else:
+                return 'python2.6'
         elif version_gte(self._opts['ami_version'], '2.4.3'):
+            # on 2.4.3+, use python2.7 because the default python
+            # doesn't have a working pip
             return 'python2.7'
         else:
+            # prior to 2.4.3, Python 2.6 is the only version installed.
+            # Use "python2.6" and not "python" for consistency
             return 'python2.6'
 
     def _fix_s3_tmp_and_log_uri_opts(self):
@@ -1976,6 +1992,7 @@ class EMRJobRunner(MRJobRunner, LogInterpretationMixin):
 
         self._master_bootstrap_script_path = path
 
+    # TODO: we may not need this
     def _on_pre_3_x_ami(self):
         """Are we on an AMI prior to 3.x (where apt-get no longer works)?
 
@@ -1983,11 +2000,8 @@ class EMRJobRunner(MRJobRunner, LogInterpretationMixin):
         to be running."""
         if self._opts['release_label']:  # hides ami_version
             return False
-
-        if self._opts['ami_version'] == 'latest':
-            return True
-
-        return not version_gte(self._opts['ami_version'], '3')
+        else:
+            return not version_gte(self._opts['ami_version'], '3')
 
     def _bootstrap_python(self):
         """Return a (possibly empty) list of parsed commands (in the same
@@ -2015,8 +2029,8 @@ class EMRJobRunner(MRJobRunner, LogInterpretationMixin):
             # see docs/guides/emr-bootstrap-cookbook.rst)
 
             # we have to have at least on AMI 3.7.0
-            if (self._opts['ami_version'] == 'latest' or
-                    not version_gte(self._opts['ami_version'], '3.7.0')):
+            if not (self._opts['release_label'] or
+                    version_gte(self._opts['ami_version'], '3.7.0')):
                 log.warning(
                     'bootstrapping Python 3 will probably not work on'
                     ' AMIs prior to 3.7.0. For an alternative, see:'
@@ -2294,10 +2308,6 @@ class EMRJobRunner(MRJobRunner, LogInterpretationMixin):
                 release_label = getattr(cluster, 'releaselabel', '')
 
                 if release_label != self._opts['release_label']:
-                    return
-            elif self._opts['ami_version'] == 'latest':
-                # look for other clusters where "latest" was requested
-                if getattr(cluster, 'requestedamiversion', '') != 'latest':
                     return
             else:
                 # match actual AMI version
